Fix header spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -278,14 +278,14 @@ body {
 .header {
   color: #fff;
   text-align: center;
-  padding: 100px 0 170px;
+  padding: 100px 0 260px;
 }
 
 .header h1 {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
-  margin: 40px auto;
+  margin: 40px auto 60px auto;
   font-size: 70px;
 }
 
@@ -293,7 +293,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: 300;
-  margin: 40px 0 60px 0;
+  margin: 60px auto 80px auto;
   font-size: 40px;
 }
 
